# solera

./: .env.example  .gitignore  README.md  compose.yaml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.base.json
.cursor/rules/: solera-contract.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/sidecar-extension/: manifest.config.ts  package.json  sidepanel.html  tsconfig.json  vite.config.ts
apps/solera-api/: Dockerfile
docs/: PROJECT_STATE.md
docs/adr/: 0001-hybrid-deployment-seam.md  0002-read-only-evidence-rendering.md  0003-modular-monolith-single-agent.md  0004-composable-skills-hybrid-routing.md  0005-loop1-synthetic-data-authority.md  0006-loop1-productization-gates.md
docs/architecture/: FASTEN1_CONCEPT_EXPERIENCE.md  HEAT1_CONCEPT_EXPERIENCE.md  LOOP1_DATA_HUB_AGENT_FLOW.md  LOOP1_DEMO_MECHANICS_AND_PRODUCT_EVOLUTION.md  SOLERA_AGENT_GALLERY_PHASE1.md  SOLERA_VS_GPT_SIDECAR.md  SYSTEM.md
docs/backlog/: V0_1_BACKLOG.md  V0_2_SKILL_BACKLOG.md
docs/contracts/: SOLERA_LOOP1_V0_1.md  SOLERA_SKILL_SYSTEM_V0_2.md  SOLERA_V0_1.md
docs/evals/: GOLDEN_QUESTIONS.md
docs/integrations/: EASY_PI.md
docs/pitch/: SOLERA_CUSTOMER_USE_CASES.md  SOLERA_PRODUCT_PITCH.md
docs/runbooks/: DEMO.md  DEPLOYMENT.md  LOCAL_SETUP_SOP.md  LOOP1_CUSTOMER_DEMO_10MIN.md  (+6 more)
scripts/: generate-contract-validators.mjs  live_easy_pi_smoke.py  loop1-demo-preflight.py  package-extension.mjs  package-loop1-handoff.mjs  run-loop1-evaluation.py
(+77 files in other folders)
