[project]
name = "solera-workspace"
version = "0.1.0"
description = "Solera v0.1 API, connector, analytics, and Flow workspace"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "fastapi>=0.139.2",
    "greenlet>=3.5.3",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = [
  "apps/solera-api",
  "connectors/easy-pi",
  "flows",
]
testpaths = [
  "apps/solera-api/tests",
  "connectors/easy-pi/tests",
  "flows/tests",
  "tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.22",
]
